# wasmer

./: Cargo.toml
lib/virtual-filesystem/: Cargo.toml
lib/virtual-filesystem/src/: decompress.rs  lib.rs  vfs.rs
